add h3 into feature

--- a/inde.html
+++ b/inde.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>adding h2 heading in main branch</h2>
+    <h3>adding h3 in feature</h3>
 </body>
 </html>
