add conflict line

--- a/inde.html
+++ b/inde.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>adding h3 in feature</h3>
+    <h2>adding conflict line</h2>
 </body>
 </html>
